--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Task App</title>
     <link rel="stylesheet" href="style.css">
     <style>
-        @media (max-width: 400px) {
+        @media screen and (max-width: 400px) {
             .board {
                 flex-direction: column;
             }
